--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -79,5 +79,9 @@
 
     "DASHBOARD_FORUMCATEGORY_TITLE": "Forum",
     "DASHBOARD_FORUMCATEGORY_NOPOST": "This category does not have any conversations yet!",
-    "DASHBOARD_FORUMCATEGORY_NEWPOSTBTN": "Create the first conversation"
+    "DASHBOARD_FORUMCATEGORY_NEWPOSTBTN": "Create the first conversation",
+    "DASHBOARD_FORUMCATEGORY_SUBJECT": "Subject",
+    "DASHBOARD_FORUMCATEGORY_LASTMESSAGE": "Last message",
+    "DASHBOARD_FORUMCATEGORY_COUNT": "Responses count"
+
 }
