Continuation du forum

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -85,6 +85,12 @@
     "DASHBOARD_FORUMCATEGORY_NEWPOSTBTN": "Create the first conversation",
     "DASHBOARD_FORUMCATEGORY_SUBJECT": "Subject",
     "DASHBOARD_FORUMCATEGORY_LASTMESSAGE": "Last message",
-    "DASHBOARD_FORUMCATEGORY_COUNT": "Responses count"
+    "DASHBOARD_FORUMCATEGORY_COUNT": "Responses count",
+
+    "DASHBOARD_FORUMPOST_TITLE": "Discussion",
+    "DASHBOARD_FORUMPOST_AUTHOR": "Author",
+    "DASHBOARD_FORUMPOST_CONTENT": "Content",
+    "DASHBOARD_FORUMPOST_CREATEDAT": "Created At",
+    "DASHBOARD_FORUMPOST_CREATEDAT": "Updated At"
 
 }
