- Commencement du backoffice admin - Rajout d'une table tf_user_invited pour gérer le système d'inscription qui arrivera bientôt - Rajout d'un champ "banned" sur la table tf_user pour introduire un système de banissement

--- a/src/langs/fr.json
+++ b/src/langs/fr.json
@@ -47,6 +47,7 @@
     "DASHBOARD_MENU_TESTS": "Tests",
     "DASHBOARD_MENU_SUBJECTS": "Sujets",
     "DASHBOARD_MENU_EXAMINERS": "Examinateurs",
+    "DASHBOARD_MENU_ADMIN": "Administration",
     "DASHBOARD_MENU_FORUM": "Forum",
     "DASHBOARD_MENU_CHAT": "Messagerie",
 
