--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -47,6 +47,7 @@
     "DASHBOARD_MENU_TESTS": "Tests",
     "DASHBOARD_MENU_SUBJECTS": "Subjects",
     "DASHBOARD_MENU_EXAMINERS": "Examiners",
+    "DASHBOARD_MENU_ADMIN": "Administration",
     "DASHBOARD_MENU_FORUM": "Forum",
     "DASHBOARD_MENU_CHAT": "Messaging",
 
