- Mise en place de PHPMailer - Avancement sur le backoffice

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -92,6 +92,25 @@
     "DASHBOARD_FORUMPOST_AUTHOR": "Author",
     "DASHBOARD_FORUMPOST_CONTENT": "Content",
     "DASHBOARD_FORUMPOST_CREATEDAT": "Created At",
-    "DASHBOARD_FORUMPOST_CREATEDAT": "Updated At"
+    "DASHBOARD_FORUMPOST_CREATEDAT": "Updated At",
+
+    "DASHBOARD_ADMIN_TITLE": "Administration",
+    "DASHBOARD_ADMIN_USERTAB": "Users",
+    "DASHBOARD_ADMIN_TICKETSTAB": "Tickets",
+    "DASHBOARD_ADMIN_FORUMTAB": "Forum",
+    "DASHBOARD_ADMIN_FAQTAB": "FAQ",
+    "DASHBOARD_ADMIN_INVITEBTN": "Invite a new member",
+    "DASHBOARD_ADMIN_SEARCH_NAME": "Lastname / Firstname",
+    "DASHBOARD_ADMIN_SEARCH_EMAIL": "Email",
+    "DASHBOARD_ADMIN_SEARCH_ROLE": "Role",
+    "DASHBOARD_ADMIN_SEARCH_BANNED": "Banned ?",
+    "DASHBOARD_ADMIN_SEARCH_ACTIONS": "Actions",
+    "DASHBOARD_ADMIN_SEARCH_EDITBTN": "Edit",
+    "DASHBOARD_ADMIN_INVITE_TITLE": "Invite a new member",
+    "DASHBOARD_ADMIN_INVITE_EMAIL": "Member's email",
+    "DASHBOARD_ADMIN_INVITE_FIRSTNAME": "Member's firstname",
+    "DASHBOARD_ADMIN_INVITE_LASTNAME": "Member's lastname",
+    "DASHBOARD_ADMIN_INVITE_ROLE": "Member's role",
+    "DASHBOARD_ADMIN_INVITE_ADDBTN": "Invite"
 
 }
