--- a/src/langs/fr.json
+++ b/src/langs/fr.json
@@ -92,5 +92,24 @@
     "DASHBOARD_FORUMPOST_AUTHOR": "Auteur",
     "DASHBOARD_FORUMPOST_CONTENT": "Message",
     "DASHBOARD_FORUMPOST_CREATEDAT": "Date de création",
-    "DASHBOARD_FORUMPOST_CREATEDAT": "Date de mise à jour"
+    "DASHBOARD_FORUMPOST_CREATEDAT": "Date de mise à jour",
+
+    "DASHBOARD_ADMIN_TITLE": "Administration",
+    "DASHBOARD_ADMIN_USERTAB": "Utilisateurs",
+    "DASHBOARD_ADMIN_TICKETSTAB": "Tickets",
+    "DASHBOARD_ADMIN_FORUMTAB": "Forum",
+    "DASHBOARD_ADMIN_FAQTAB": "FAQ",
+    "DASHBOARD_ADMIN_INVITEBTN": "Inviter un membre",
+    "DASHBOARD_ADMIN_SEARCH_NAME": "Nom / Prénom",
+    "DASHBOARD_ADMIN_SEARCH_EMAIL": "Email",
+    "DASHBOARD_ADMIN_SEARCH_ROLE": "Rôle",
+    "DASHBOARD_ADMIN_SEARCH_BANNED": "Banni ?",
+    "DASHBOARD_ADMIN_SEARCH_ACTIONS": "Actions",
+    "DASHBOARD_ADMIN_SEARCH_EDITBTN": "Modifier",
+    "DASHBOARD_ADMIN_INVITE_TITLE": "Inviter un membre",
+    "DASHBOARD_ADMIN_INVITE_EMAIL": "Email du membre",
+    "DASHBOARD_ADMIN_INVITE_FIRSTNAME": "Nom du membre",
+    "DASHBOARD_ADMIN_INVITE_LASTNAME": "Prénom du membre",
+    "DASHBOARD_ADMIN_INVITE_ROLE": "Rôle du membre",
+    "DASHBOARD_ADMIN_INVITE_ADDBTN": "Inviter"
 }
