- Inscription fermée implémentée - Amélioration du router

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -7,8 +7,7 @@
     "404_DO_NOT_EXIST": "The page you are looking for does not exist or no longer exists. Go back or",
     "404_BACK_HOME": "come back to home",
 
-    "HOME_NAVBAR_CONNECT": "Sign Up",
-    "HOME_NAVBAR_SUBSCRIBE": "Sign In",
+    "HOME_NAVBAR_CONNECT": "Sign In",
 
     "HOME_TABTITLE_HOME": "Home",
     "HOME_NAVTITLE_HOME": "Discover Testify",
