--- a/src/langs/fr.json
+++ b/src/langs/fr.json
@@ -7,8 +7,7 @@
     "404_DO_NOT_EXIST": "La page que vous cherchez n'existe pas ou plus. Revenez en arrière ou",
     "404_BACK_HOME": "revenez à l'accueil",
 
-    "HOME_NAVBAR_CONNECT": "Inscription",
-    "HOME_NAVBAR_SUBSCRIBE": "Connexion",
+    "HOME_NAVBAR_CONNECT": "Connexion",
 
     "HOME_TABTITLE_HOME": "Accueil",
     "HOME_NAVTITLE_HOME": "Découvrir Testify",
