--- a/src/langs/fr.json
+++ b/src/langs/fr.json
@@ -21,6 +21,14 @@
     "HOME_CONNECT_PASSWORD": "Votre mot de passe",
     "HOME_CONNECT_BUTTON": "Se connecter",
 
+    "HOME_REGISTER_TITLE": "Inscription",
+    "HOME_REGISTER_EMAIL": "Votre adresse email",
+    "HOME_REGISTER_LASTNAME": "Votre nom",
+    "HOME_REGISTER_FIRSTNAME": "Votre prénom",
+    "HOME_REGISTER_PASSWORD": "Votre mot de passe",
+    "HOME_REGISTER_PASSWORDCHECK": "Vérification de votre mot de passe",
+    "HOME_REGISTER_REGISTERBTN": "S'inscrire",
+
     "API_USER_NO_USERNAME_PROVIDED": "L'adresse e-mail n'a pas été fournie !",
     "API_USER_NO_PASSWORD_PROVIDED": "Le mot de passe n'a pas été fourni !",
     "API_USER_NO_USER": "Le couple identifiant/mot de passe est incorrect !",
@@ -28,6 +36,16 @@
     "API_USER_NOT_FOUND": "L'utilisateur est introuvable !",
     "API_USER_SEARCH_NO_CRITERIA": "Pas de critère donné !",
     "API_USER_DECONNECT_ERROR": "Une erreur est survenue pendant la deconnexion !",
+    "API_USER_CREATE_NO_TOKEN": "Le code d'invitation n'a pas été fourni !",
+    "API_USER_CREATE_NO_EMAIL": "L'email d'invitation n'a pas été fourni !",
+    "API_USER_CREATE_NO_FIRSTNAME": "Le prénom n'a pas été fourni !",
+    "API_USER_CREATE_NO_LASTNAME": "Le nom n'a pas été fourni !",
+    "API_USER_CREATE_NO_PASSWORD": "Le mot de passe n'a pas été fourni !",
+    "API_USER_CREATE_NO_PASSWORDCHECK": "La vérification du mot de passe n'a pas été fournie !",
+    "API_USER_CREATE_PASSWORD_NOT_MATCH": "La vérification et le mot de passe ne correspondent pas !",
+    "API_USER_CREATE_INVITE_EXPIRED": "L'invitation n'a pas été trouvée ou est expirée",
+    "API_USER_CREATE_USER_ERROR": "Une erreur exceptionnelle est arrivée pendant la création de l'utilisateur",
+    "API_USER_CREATE_USER_SUCCESS": "Félicitations vous êtes inscrit ! Vous pouvez à présent vous connecter sur la page de connexion",
 
     "API_MESSAGE_NOACCESS": "Vous n'avez pas accès aux informations de cet utilisateur !",
     "API_MESSAGE_NOPAGE": "Pas de page recu !",
@@ -110,5 +128,22 @@
     "DASHBOARD_ADMIN_INVITE_FIRSTNAME": "Nom du membre",
     "DASHBOARD_ADMIN_INVITE_LASTNAME": "Prénom du membre",
     "DASHBOARD_ADMIN_INVITE_ROLE": "Rôle du membre",
-    "DASHBOARD_ADMIN_INVITE_ADDBTN": "Inviter"
+    "DASHBOARD_ADMIN_INVITE_LANG": "Langue du mail",
+    "DASHBOARD_ADMIN_INVITE_ADDBTN": "Inviter",
+
+    "API_ADMIN_INVITE_NO_EMAIL": "L'adresse email n'a pas été fournie !",
+    "API_ADMIN_INVITE_NO_FIRSTNAME": "Le prénom n'a pas été fourni !",
+    "API_ADMIN_INVITE_NO_LASTNAME": "Le nom n'a pas été fourni !",
+    "API_ADMIN_INVITE_NO_ROLE": "Le rôle n'a pas été fourni !",
+    "API_ADMIN_INVITE_NO_LANG": "La langue du mail n'a pas été fournie !",
+    "API_ADMIN_INVITE_CREATE_ERROR": "Une erreur exceptionnelle est arrivée pendant la création de l'invitation",
+    "API_ADMIN_INVITE_SEND_ERROR": "Une erreur exceptionnelle est arrivée pendant l'envoi par mail de l'invitation",
+
+
+    "API_ADMIN_INVITE_MAIL_TITLE": "Testify - Inscription",
+    "API_ADMIN_INVITE_MAIL_WELCOME": "Bienvenue",
+    "API_ADMIN_INVITE_MAIL_EXPLAIN": "Vous avez été invité à vous inscrire sur la plateforme Testify par l'établissement XXXX. Cette plateforme vous permet de consulter vos résultats de tests psychomoteurs passé dans votre établissement.",
+    "API_ADMIN_INVITE_MAIL_WARN": "Vous disposez de 72h pour répondre à l'invitation. Si ne vous inscrivez pas dans le temps imparti vous devrez contacter un responsable de votre établissement de tests afin de redemander une nouvelle invitation.",
+    "API_ADMIN_INVITE_MAIL_REGISTERBTN": "S'INSCRIRE MAINTENANT",
+    "API_ADMIN_INVITE_MAIL_COPYRIGHT": "Tous droits réservés"
 }
