--- a/src/langs/fr.json
+++ b/src/langs/fr.json
@@ -160,6 +160,7 @@
     "API_ADMIN_INVITE_NO_LANG": "La langue du mail n'a pas été fournie !",
     "API_ADMIN_INVITE_CREATE_ERROR": "Une erreur exceptionnelle est arrivée pendant la création de l'invitation",
     "API_ADMIN_INVITE_SEND_ERROR": "Une erreur exceptionnelle est arrivée pendant l'envoi par mail de l'invitation",
+    "API_ADMIN_INVITE_SEND_SUCCESS": "à bien été invité !",
 
     "API_ADMIN_USER_NOT_FOUND": "L'utilisateur n'a pas été trouvé !",
     "API_ADMIN_USER_UPDATE_ERROR": "Une erreur exceptionnelle est arrivée pendant la mise à jour de l'utilisateur !",
@@ -170,5 +171,10 @@
     "API_ADMIN_INVITE_MAIL_EXPLAIN": "Vous avez été invité à vous inscrire sur la plateforme Testify par l'établissement XXXX. Cette plateforme vous permet de consulter vos résultats de tests psychomoteurs passé dans votre établissement.",
     "API_ADMIN_INVITE_MAIL_WARN": "Vous disposez de 72h pour répondre à l'invitation. Si ne vous inscrivez pas dans le temps imparti vous devrez contacter un responsable de votre établissement de tests afin de redemander une nouvelle invitation.",
     "API_ADMIN_INVITE_MAIL_REGISTERBTN": "S'INSCRIRE MAINTENANT",
-    "API_ADMIN_INVITE_MAIL_COPYRIGHT": "Tous droits réservés"
+    "API_ADMIN_INVITE_MAIL_COPYRIGHT": "Tous droits réservés",
+
+    "API_CONTACT_MAIL_TITLE": "Testify - Nouveau message",
+    "API_CONTACT_MAIL_MAINTITLE": "Vous avez un nouveau message !",
+    "API_CONTACT_MAIL_DESCRIPTION": "vient de vous envoyer un message via la page de contact du site Testify",
+    "API_CONTACT_MAIL_COPYRIGHT": "Tous droits réservés"
 }
