--- a/src/langs/fr.json
+++ b/src/langs/fr.json
@@ -23,6 +23,20 @@
     "HOME_CONNECT_BUTTON": "Se connecter",
 
     "HOME_CONTACT_TITLE": "Contact",
+    "HOME_CONTACT_NAME": "Votre nom",
+    "HOME_CONTACT_EMAIL": "Votre email",
+    "HOME_CONTACT_MESSAGE": "Votre message",
+    "HOME_CONTACT_SENDBTN": "Envoyer mon message",
+
+    "API_CONTACT_NO_NAME": "Le nom n'a pas été fourni !",
+    "API_CONTACT_NO_EMAIL": "L'email n'a pas été fourni !",
+    "API_CONTACT_NO_MESSAGE": "Le message n'a pas été fourni !",
+    "API_CONTACT_SUCCESS": "Votre message à bien été envoyé !",
+    "API_CONTACT_ERROR": "Une erreur est survenue pendant l'envoi de votre message",
+    "API_CONTACT_MAIL_TITLE": "Testify - Nouveau message",
+    "API_CONTACT_MAIL_MAINTITLE": "Vous avez un nouveau message !",
+    "API_CONTACT_MAIL_DESCRIPTION": "vient de vous envoyer un message via la page de contact du site Testify",
+    "API_CONTACT_MAIL_COPYRIGHT": "Tous droits réservés",
 
     "HOME_REGISTER_TITLE": "Inscription",
     "HOME_REGISTER_EMAIL": "Votre adresse email",
@@ -65,6 +79,7 @@
     "API_USER_UPDATE_PASSWORD_CHECK_ERROR": "Le mot de passe ne correspond pas avec la vérification !",
     "API_USER_UPDATE_ERROR": "Une erreur exceptionnelle est survenue pendant la mise à jour de vos informations !",
     "API_USER_UPDATE_SUCCESS": "Votre profil à bien été mis à jour !",
+    "API_USER_DELETE_ERROR": "Une erreur est survenue pendant la suppression de l'utilisateur",
 
     "API_MESSAGE_NOACCESS": "Vous n'avez pas accès aux informations de cet utilisateur !",
     "API_MESSAGE_NOPAGE": "Pas de page recu !",
@@ -72,12 +87,32 @@
     "API_MESSAGE_USER_NOT_FOUND": "L'utilisateur est introuvable !",
     "API_MESSAGE_CONTACT_NOT_FOUND": "Le contact est introuvable !",
     "API_MESSAGE_NO_MESSAGE_GIVEN": "Pas de message donné !",
+    "API_MESSAGE_CREATE_ERROR": "Une erreur est survenue pendant la création du message !",
 
     "API_FORUM_NO_NAME_GIVEN": "Pas de nom de catégorie donné !",
+    "API_FORUM_NO_DESCRIPTION_GIVEN": "Pas de description donnée !",
+    "API_FORUM_CREATE_CATEGORY_ERROR": "Une erreur est survenue pendant la création de la catégorie !",
+    "API_FORUM_REORDER_CATEGORY_NO_DIRECTION": "La direction de déplacement n'a pas été fourni !",
+    "API_FORUM_REORDER_CATEGORY_ERROR": "Une erreur est survenue pendant le déplacement de la catégorie !",
+    "API_FORUM_DELETE_CATEGORY_ERROR": "Une erreur est survenue pendant la suppression de la catégorie !",
+    "API_FORUM_POST_NO_TITLE": "Le titre n'a pas été fourni !",
+    "API_FORUM_POST_CREATE_ERROR": "Une erreur est survenue pendant la création de la discussion !",
+    "API_FORUM_NOPAGE": "Pas de page recu !",
+    "API_FORUM_NOSIZEPAGE": "Pas de taille de page recu !",
+    "API_FORUM_RESPONSE_NO_CONTENT": "Pas de message donnée !",
+    "API_FORUM_POST_NOT_FOUND": "La discussion est introuvable !",
+    "API_FORUM_RESPONSE_CREATE_ERROR": "Une erreur est survenue pendant la création de la réponse !",
+    "API_FORUM_RESPONSE_NOT_FOUND": "La réponse est introuvable !",
+    "API_FORUM_RESPONSE_NOACCESS": "Vous n'avez pas accès à la réponse !",
+    "API_FORUM_DELETE_RESPONSE_ERROR": "Une erreur est survenue pendant la suppression de la réponse !",
+    "API_FORUM_POST_NOACCESS": "Vous n'avez pas accès à la discussion !",
+    "API_FORUM_DELETE_POST_ERROR": "Une erreur est survenue pendant la suppression de la discussion !",
     "API_FORUM_CATEGORY_NOT_FOUND": "La catégorie est introuvable !",
 
     "API_FAQ_NO_QUESTION_GIVEN": "Pas de question donnée !",
     "API_FAQ_NO_ANSWER_GIVEN": "Pas de réponse donnée !",
+    "API_FAQ_CREATE_FAQ_ERROR": "Une erreur est survenue pendant la création de votre question !",
+    "API_FAQ_DELETE_FAQ_ERROR": "Une erreur est survenue pendant la suppression de votre question !",
 
     "DASHBOARD_MENU_ROOT": "Accueil",
     "DASHBOARD_MENU_TESTS": "Tests",
@@ -114,21 +149,23 @@
     "DASHBOARD_FORUM_MODAL_NAME_EXAMPLE": "Ex: Ma catégorie",
     "DASHBOARD_FORUM_MODAL_ADDBTN": "Ajouter",
 
-    "API_FORUM_NOPAGE": "Pas de page recu !",
-    "API_FORUM_NOSIZEPAGE": "Pas de taille de page recu !",
-
     "DASHBOARD_FORUMCATEGORY_TITLE": "Forum",
     "DASHBOARD_FORUMCATEGORY_NOPOST": "Cette catégorie ne dispose pas encore de conversations !",
-    "DASHBOARD_FORUMCATEGORY_NEWPOSTBTN": "Créer la première conversation",
+    "DASHBOARD_FORUMCATEGORY_NEWFIRSTPOSTBTN": "Créer la première conversation",
     "DASHBOARD_FORUMCATEGORY_SUBJECT": "Sujet du post",
     "DASHBOARD_FORUMCATEGORY_LASTMESSAGE": "Dernier message",
     "DASHBOARD_FORUMCATEGORY_COUNT": "Nombre de messages",
+    "DASHBOARD_FORUMCATEGORY_NEWPOSTBTN": "Nouvelle discussion",
+    "DASHBOARD_FORUMCATEGORY_POSTMODAL_MAINTITLE": "Nouvelle discussion",
+    "DASHBOARD_FORUMCATEGORY_POSTMODAL_TITLE": "Titre de la discussion",
+    "DASHBOARD_FORUMCATEGORY_POSTMODAL_ADDBTN": "Ajouter",
 
     "DASHBOARD_FORUMPOST_TITLE": "Discussion",
     "DASHBOARD_FORUMPOST_AUTHOR": "Auteur",
     "DASHBOARD_FORUMPOST_CONTENT": "Message",
     "DASHBOARD_FORUMPOST_CREATEDAT": "Date de création",
     "DASHBOARD_FORUMPOST_CREATEDAT": "Date de mise à jour",
+    "DASHBOARD_FORUMPOST_REPLYBTN": "Répondre",
 
     "DASHBOARD_ADMIN_TITLE": "Administration",
     "DASHBOARD_ADMIN_USERTAB": "Utilisateurs",
@@ -136,6 +173,7 @@
     "DASHBOARD_ADMIN_FORUMTAB": "Forum",
     "DASHBOARD_ADMIN_FAQTAB": "FAQ",
     "DASHBOARD_ADMIN_INVITEBTN": "Inviter un membre",
+    "DASHBOARD_ADMIN_FILTERBTN": "Filtres",
     "DASHBOARD_ADMIN_SEARCH_NAME": "Nom / Prénom",
     "DASHBOARD_ADMIN_SEARCH_EMAIL": "Email",
     "DASHBOARD_ADMIN_SEARCH_ROLE": "Rôle",
@@ -152,6 +190,10 @@
     "DASHBOARD_ADMIN_FASTEDIT_CONFIRM_TITLE": "Êtes-vous sûr de votre action ?",
     "DASHBOARD_ADMIN_FASTEDIT_CONFIRMBTN": "Je confirme",
     "DASHBOARD_ADMIN_FASTEDIT_CANCELBTN": "Annuler l'action",
+    "DASHBOARD_ADMIN_FORUM_ADDCATEGORYBTN": "Nouvelle catégorie",
+    "DASHBOARD_ADMIN_FORUM_NOCATEGORY": "Vous n'avez pas encore créé de catégorie",
+    "DASHBOARD_ADMIN_FAQ_CREATEBTN": "Nouvelle question",
+    "DASHBOARD_ADMIN_FAQ_NOFAQ": "Vous n'avez pas encore créé de question",
 
     "API_ADMIN_INVITE_NO_EMAIL": "L'adresse email n'a pas été fournie !",
     "API_ADMIN_INVITE_NO_FIRSTNAME": "Le prénom n'a pas été fourni !",
@@ -173,8 +215,12 @@
     "API_ADMIN_INVITE_MAIL_REGISTERBTN": "S'INSCRIRE MAINTENANT",
     "API_ADMIN_INVITE_MAIL_COPYRIGHT": "Tous droits réservés",
 
-    "API_CONTACT_MAIL_TITLE": "Testify - Nouveau message",
-    "API_CONTACT_MAIL_MAINTITLE": "Vous avez un nouveau message !",
-    "API_CONTACT_MAIL_DESCRIPTION": "vient de vous envoyer un message via la page de contact du site Testify",
-    "API_CONTACT_MAIL_COPYRIGHT": "Tous droits réservés"
+    "DASHBOARD_PROFILE_TITLE": "Profil",
+    "DASHBOARD_PROFILE_EMAIL": "Email",
+    "DASHBOARD_PROFILE_FIRSTNAME": "Prénom",
+    "DASHBOARD_PROFILE_LASTNAME": "Nom",
+    "DASHBOARD_PROFILE_PASSWORD": "Modifier le mot de passe",
+    "DASHBOARD_PROFILE_PASSWORDCHECK": "Vérifier le mot de passe",
+    "DASHBOARD_PROFILE_UPDATEBTN": "Mettre à jour mes informations"
+
 }
