Traductions finies pour ce qui à été implémenté jusqu'à maintenant

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -142,6 +142,7 @@
     "DASHBOARD_FORUM_GOPOSTSBTN": "Go to posts",
     "DASHBOARD_FORUM_MODAL_NEWCATEGORY_TITLE": "New category",
     "DASHBOARD_FORUM_MODAL_NAME": "Name of the category",
+    "DASHBOARD_FORUM_MODAL_DESCRIPTION": "Description of the category",
     "DASHBOARD_FORUM_MODAL_NAME_EXAMPLE": "Eg: My category",
     "DASHBOARD_FORUM_MODAL_ADDBTN": "Create",
 
@@ -186,10 +187,23 @@
     "DASHBOARD_ADMIN_FASTEDIT_CONFIRM_TITLE": "Are you sure of your action?",
     "DASHBOARD_ADMIN_FASTEDIT_CONFIRMBTN": "I confirm that",
     "DASHBOARD_ADMIN_FASTEDIT_CANCELBTN": "Cancel the action",
+    "DASHBOARD_ADMIN_EDIT_TITLE": "Edit user",
+    "DASHBOARD_ADMIN_EDIT_EMAIL": "Member email",
+    "DASHBOARD_ADMIN_EDIT_FIRSTNAME": "Member firstname",
+    "DASHBOARD_ADMIN_EDIT_LASTNAME": "Member lastname",
+    "DASHBOARD_ADMIN_EDIT_EDITBTN": "Edit",
+    "DASHBOARD_ADMIN_USER_DELETE_CONFIRM_TITLE": "Do you really want to delete this user?",
+    "DASHBOARD_ADMIN_USER_DELETE_CONFIRM_CONFIRM": "Delete",
+    "DASHBOARD_ADMIN_USER_DELETE_CONFIRM_CANCEL": "Cancel",
     "DASHBOARD_ADMIN_FORUM_ADDCATEGORYBTN": "Create category",
     "DASHBOARD_ADMIN_FORUM_NOCATEGORY": "You do not have created a category yet",
     "DASHBOARD_ADMIN_FAQ_CREATEBTN": "Create question",
     "DASHBOARD_ADMIN_FAQ_NOFAQ": "You do not have created a question yet",
+    "DASHBOARD_ADMIN_FORUM_MODAL_NEWFAQ_TITLE": "New question",
+    "DASHBOARD_ADMIN_FORUM_MODAL_NEWFAQ_QUESTION": "Question",
+    "DASHBOARD_ADMIN_FORUM_MODAL_NEWFAQ_ANSWER": "Answer",
+    "DASHBOARD_ADMIN_FORUM_MODAL_NEWFAQ_ADDBTN": "Add",
+    "DASHBOARD_ADMIN_FORUM_MODAL_DELETEFAQ_DELBTN": "Delete question",
 
     "API_ADMIN_INVITE_NO_EMAIL": "No email given!",
     "API_ADMIN_INVITE_NO_FIRSTNAME": "No firstname given!",
