--- a/src/langs/fr.json
+++ b/src/langs/fr.json
@@ -146,6 +146,7 @@
     "DASHBOARD_FORUM_GOPOSTSBTN": "Accéder aux posts",
     "DASHBOARD_FORUM_MODAL_NEWCATEGORY_TITLE": "Nouvelle catégorie",
     "DASHBOARD_FORUM_MODAL_NAME": "Nom de la catégorie",
+    "DASHBOARD_FORUM_MODAL_DESCRIPTION": "Description de la catégorie",
     "DASHBOARD_FORUM_MODAL_NAME_EXAMPLE": "Ex: Ma catégorie",
     "DASHBOARD_FORUM_MODAL_ADDBTN": "Ajouter",
 
@@ -190,10 +191,23 @@
     "DASHBOARD_ADMIN_FASTEDIT_CONFIRM_TITLE": "Êtes-vous sûr de votre action ?",
     "DASHBOARD_ADMIN_FASTEDIT_CONFIRMBTN": "Je confirme",
     "DASHBOARD_ADMIN_FASTEDIT_CANCELBTN": "Annuler l'action",
+    "DASHBOARD_ADMIN_EDIT_TITLE": "Modifier l'utilisateur",
+    "DASHBOARD_ADMIN_EDIT_EMAIL": "Email du membre",
+    "DASHBOARD_ADMIN_EDIT_FIRSTNAME": "Prénom du membre",
+    "DASHBOARD_ADMIN_EDIT_LASTNAME": "Nom du membre",
+    "DASHBOARD_ADMIN_EDIT_EDITBTN": "Modifier",
+    "DASHBOARD_ADMIN_USER_DELETE_CONFIRM_TITLE": "Voulez-vous vraiment supprimer cet utilisateur ?",
+    "DASHBOARD_ADMIN_USER_DELETE_CONFIRM_CONFIRM": "Supprimer",
+    "DASHBOARD_ADMIN_USER_DELETE_CONFIRM_CANCEL": "Annuler",
     "DASHBOARD_ADMIN_FORUM_ADDCATEGORYBTN": "Nouvelle catégorie",
     "DASHBOARD_ADMIN_FORUM_NOCATEGORY": "Vous n'avez pas encore créé de catégorie",
     "DASHBOARD_ADMIN_FAQ_CREATEBTN": "Nouvelle question",
     "DASHBOARD_ADMIN_FAQ_NOFAQ": "Vous n'avez pas encore créé de question",
+    "DASHBOARD_ADMIN_FORUM_MODAL_NEWFAQ_TITLE": "Nouvelle question",
+    "DASHBOARD_ADMIN_FORUM_MODAL_NEWFAQ_QUESTION": "Question",
+    "DASHBOARD_ADMIN_FORUM_MODAL_NEWFAQ_ANSWER": "Réponse",
+    "DASHBOARD_ADMIN_FORUM_MODAL_NEWFAQ_ADDBTN": "Ajouter",
+    "DASHBOARD_ADMIN_FORUM_MODAL_DELETEFAQ_DELBTN": "Supprimer la question",
 
     "API_ADMIN_INVITE_NO_EMAIL": "L'adresse email n'a pas été fournie !",
     "API_ADMIN_INVITE_NO_FIRSTNAME": "Le prénom n'a pas été fourni !",
