--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -115,6 +115,7 @@
     "DASHBOARD_MENU_SUBJECTS": "Subjects",
     "DASHBOARD_MENU_EXAMINERS": "Examiners",
     "DASHBOARD_MENU_ADMIN": "Administration",
+    "DASHBOARD_MENU_TICKET": "Tickets",
     "DASHBOARD_MENU_FORUM": "Forum",
     "DASHBOARD_MENU_CHAT": "Messaging",
 
@@ -161,7 +162,7 @@
     "DASHBOARD_FORUMPOST_AUTHOR": "Author",
     "DASHBOARD_FORUMPOST_CONTENT": "Content",
     "DASHBOARD_FORUMPOST_CREATEDAT": "Created At",
-    "DASHBOARD_FORUMPOST_CREATEDAT": "Updated At",
+    "DASHBOARD_FORUMPOST_UPDATEDAT": "Updated At",
     "DASHBOARD_FORUMPOST_REPLYBTN": "Reply",
 
     "DASHBOARD_ADMIN_TITLE": "Administration",
